@@ -230,6 +230,8 @@ PHP 8.2 UPGRADE NOTES
 - Standard
   . unserialize() now performs a stricter validation of the structure of serialized
     objects.
+  . mail() function reverts back to the mixed LF and CRLF new lines (behavior
+    before PHP 8.0) if mail.mixed_lf_and_crlf INI is on.
 
 - XML
   . xml_parser_set_option() now actually returns false when attempting to set a
