@@ -8,6 +8,9 @@ PHP                                                                        NEWS
 - GMP:
   . Properly implement GMP::__construct(). (nielsdos)
 
+- Standard:
+  - Fixed bug GH-8086 (Introduce mail.mixed_lf_and_crlf INI). (Jakub Zelenka)
+
 02 Feb 2023, PHP 8.2.2
 
 - Core:
